--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ canvas {
   position: absolute;
   inset: 0;
   background: rgba(255,255,255,.97);
+  border-radius: 14px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,7 +47,6 @@ canvas {
   text-align: center;
   z-index: 10;
   padding: 20px;
-  border-radius: 14px;
   color: #0d47a1;
 }
 
@@ -85,14 +85,13 @@ button:hover { background: #ffc107; }
     <p>
       🎯 Saute pour éviter les obstacles<br>
       🖱️ Clic / Toucher / <b>Espace</b><br><br>
-      🧠 En cas de collision, réponds à une question professionnelle<br>
-      ✔ Bonne réponse : tu continues<br>
-      ❌ Mauvaise réponse : fin de partie
+      💡 En cas de collision, réponds à une question professionnelle pour continuer.
     </p>
     <button id="startBtn">Démarrer</button>
   </div>
 
   <div id="question" class="overlay" style="display:none"></div>
+  <div id="countdown" class="overlay" style="display:none;font-size:72px;"></div>
 </div>
 
 <div id="footer">
@@ -100,7 +99,7 @@ La Mission Locale vous souhaite un bon jeu.
 </div>
 
 <script>
-/* =================== CANVAS =================== */
+/* ================= CANVAS ================= */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 const container = document.getElementById("container");
@@ -114,50 +113,53 @@ function resizeCanvas(){
 window.addEventListener("resize", resizeCanvas);
 resizeCanvas();
 
-/* =================== QUESTIONS =================== */
+/* ================= QUESTIONS ================= */
 const QUESTIONS = [
-{q:"Quel est le rôle principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Distribuer des offres d’emploi uniquement","Former directement aux métiers"],a:0},
-{q:"Un CV sert principalement à :",c:["Obtenir un entretien","Raconter sa vie","Justifier son parcours scolaire"],a:0},
-{q:"Une lettre de motivation doit être :",c:["Personnalisée pour chaque candidature","Identique pour tous les employeurs","Très longue"],a:0},
-{q:"Lors d’un entretien, il est important :",c:["D’arriver à l’heure","De tutoyer le recruteur","De parler uniquement de soi"],a:0},
-{q:"Une compétence, c’est :",c:["Un savoir-faire ou un savoir-être","Un diplôme uniquement","Un métier"],a:0},
-{q:"Le savoir-être correspond :",c:["Au comportement professionnel","Aux connaissances théoriques","Au salaire"],a:0},
-{q:"Avant un entretien, il est conseillé :",c:["De se renseigner sur l’entreprise","D’improviser","D’éviter les questions"],a:0},
-{q:"Un stage permet :",c:["De découvrir un métier","D’obtenir un CDI automatiquement","D’éviter la formation"],a:0},
-{q:"Un contrat d’apprentissage combine :",c:["Travail et formation","Deux emplois","Travail bénévole"],a:0},
-{q:"La ponctualité au travail est :",c:["Une qualité professionnelle","Optionnelle","Peu importante"],a:0},
-{q:"Le travail en équipe demande :",c:["Communication et respect","Autorité","Silence"],a:0},
+{q:"Quel est l’objectif principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Distribuer des offres d’emploi uniquement","Former directement aux métiers"],a:0},
+{q:"Un CV sert avant tout à :",c:["Décrocher un entretien","Expliquer toute sa vie","Remplacer l’entretien"],a:0},
+{q:"Une compétence professionnelle correspond :",c:["À un savoir-faire ou savoir-être","À un loisir","À un diplôme uniquement"],a:0},
+{q:"Lors d’un entretien, il est conseillé :",c:["De préparer ses réponses","D’improviser","De parler sans écouter"],a:0},
+{q:"Le savoir-être concerne :",c:["Le comportement au travail","Les connaissances scolaires","Le salaire"],a:0},
+{q:"Un projet professionnel peut évoluer :",c:["Oui, avec l’expérience","Non","Uniquement après un diplôme"],a:0},
+{q:"Arriver à l’heure au travail montre :",c:["Le professionnalisme","L’indifférence","Le stress"],a:0},
+{q:"Un recruteur attend principalement :",c:["De la motivation et de la cohérence","Une perfection immédiate","Une longue expérience"],a:0},
+{q:"Un stage permet :",c:["De découvrir un métier","D’éviter la formation","D’obtenir un CDI"],a:0},
+{q:"Une lettre de motivation doit être :",c:["Personnalisée","Identique pour tous","Très longue"],a:0},
+{q:"Le travail en équipe nécessite :",c:["Communication et respect","Autorité","Silence"],a:0},
+{q:"Un refus de candidature peut servir à :",c:["Progresser","Abandonner","Se décourager"],a:0},
 {q:"Un objectif professionnel doit être :",c:["Réaliste et précis","Flou","Imposé"],a:0},
-{q:"Lors d’un refus, il est conseillé :",c:["D’analyser pour progresser","D’abandonner","D’insister"],a:0},
-{q:"Un recruteur regarde en priorité :",c:["La cohérence du parcours","L’âge","Les loisirs"],a:0},
 {q:"La Mission Locale s’adresse aux jeunes :",c:["De 16 à 25 ans","De tout âge","Uniquement diplômés"],a:0},
-{q:"Un projet professionnel peut évoluer :",c:["Oui","Non","Uniquement après un diplôme"],a:0},
-{q:"Le respect des règles en entreprise est :",c:["Essentiel","Secondaire","Inutile"],a:0},
-{q:"Un entretien sert à :",c:["Évaluer la motivation","Critiquer","Remplacer le CV"],a:0},
-{q:"Un CV doit être :",c:["Lisible et clair","Très coloré","Très long"],a:0},
-{q:"Demander de l’aide est :",c:["Une démarche positive","Un échec","Inutile"],a:0}
+{q:"Le respect des règles en entreprise est :",c:["Essentiel","Optionnel","Secondaire"],a:0},
+{q:"Avant un entretien, il est utile :",c:["De se renseigner sur l’entreprise","D’éviter les informations","De rester vague"],a:0},
+{q:"Un CV clair permet :",c:["Une meilleure lecture","De masquer son parcours","D’impressionner visuellement"],a:0},
+{q:"Demander de l’aide montre :",c:["Une démarche positive","Une faiblesse","Un manque de motivation"],a:0},
+{q:"Un parcours professionnel peut être :",c:["Progressif","Figé","Parfait dès le départ"],a:0},
+{q:"L’autonomie au travail signifie :",c:["Savoir s’organiser","Travailler seul","Ne pas demander d’aide"],a:0}
 ];
 
-/* =================== GAME STATE =================== */
+let questionDeck = [];
+
+/* ================= GAME STATE ================= */
 let state = "menu";
 let score = 0;
 let level = 1;
 let speed = 3;
 let gravity = 0.45;
-let obstacles = [];
+let immunity = 0;
 let lastSpawn = 0;
-let jumps = 0;
+let obstacles = [];
 
 const player = {
   x: 120,
   y: 0,
   r: 22,
-  vy: 0
+  vy: 0,
+  jumps: 0
 };
 
 function groundY(){ return canvas.height - 60; }
 
-/* =================== RESET =================== */
+/* ================= RESET ================= */
 function resetGame(){
   score = 0;
   level = 1;
@@ -165,31 +167,30 @@ function resetGame(){
   obstacles = [];
   player.y = groundY();
   player.vy = 0;
-  jumps = 0;
+  player.jumps = 0;
+  immunity = 120;
   questionDeck = [...QUESTIONS].sort(()=>Math.random()-0.5);
 }
 
-let questionDeck = [];
-
-/* =================== START =================== */
+/* ================= START ================= */
 document.getElementById("startBtn").onclick = () => {
   document.getElementById("menu").style.display = "none";
   resetGame();
-  state = "play";
+  startCountdown();
 };
 
-/* =================== CONTROLS =================== */
+/* ================= CONTROLS ================= */
 function jump(){
-  if(state === "play" && jumps < 2){
+  if(state === "play" && player.jumps < 2){
     player.vy = -14;
-    jumps++;
+    player.jumps++;
   }
 }
 window.addEventListener("keydown",e=>{if(e.code==="Space")jump();});
 canvas.addEventListener("click",jump);
 canvas.addEventListener("touchstart",jump);
 
-/* =================== OBSTACLES =================== */
+/* ================= OBSTACLES ================= */
 function spawnObstacle(){
   const air = Math.random() < 0.3;
   const h = air ? 22 : 32;
@@ -201,19 +202,22 @@ function spawnObstacle(){
   });
 }
 
-/* =================== QUESTIONS =================== */
+/* ================= QUESTION ================= */
 function showQuestion(){
   state="question";
   const box=document.getElementById("question");
   const q=questionDeck.shift();
+
   box.innerHTML=`<h3>${q.q}</h3>`;
   q.c.forEach((t,i)=>{
     const b=document.createElement("button");
     b.textContent=t;
     b.onclick=()=>{
       box.style.display="none";
-      if(i===q.a){state="play";}
-      else{
+      if(i===q.a){
+        immunity=120;
+        startCountdown();
+      } else {
         document.getElementById("menu").style.display="flex";
         state="menu";
       }
@@ -223,7 +227,25 @@ function showQuestion(){
   box.style.display="flex";
 }
 
-/* =================== LOOP =================== */
+/* ================= COUNTDOWN ================= */
+function startCountdown(){
+  const cd=document.getElementById("countdown");
+  let t=3;
+  cd.style.display="flex";
+  cd.textContent=t;
+  state="countdown";
+  const i=setInterval(()=>{
+    t--;
+    cd.textContent=t;
+    if(t<=0){
+      clearInterval(i);
+      cd.style.display="none";
+      state="play";
+    }
+  },1000);
+}
+
+/* ================= LOOP ================= */
 function loop(time){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
@@ -234,10 +256,10 @@ function loop(time){
     if(player.y>=groundY()){
       player.y=groundY();
       player.vy=0;
-      jumps=0;
+      player.jumps=0;
     }
 
-    if(time-lastSpawn>1300){
+    if(time-lastSpawn>1400){
       spawnObstacle();
       lastSpawn=time;
     }
@@ -247,14 +269,19 @@ function loop(time){
       ctx.fillStyle="#e53935";
       ctx.fillRect(o.x,o.y,o.w,o.h);
 
-      if(player.x+player.r>o.x && player.x-player.r<o.x+o.w && player.y+player.r>o.y){
+      if(immunity<=0 &&
+        player.x+player.r>o.x &&
+        player.x-player.r<o.x+o.w &&
+        player.y+player.r>o.y){
         showQuestion();
       }
     });
 
     obstacles=obstacles.filter(o=>o.x+o.w>0);
+
     score++;
-    if(score%500===0){level++;speed+=0.6;}
+    if(score%500===0){level++;speed+=0.5;}
+    if(immunity>0) immunity--;
   }
 
   /* PLAYER */
@@ -271,6 +298,7 @@ function loop(time){
   ctx.textBaseline="middle";
   ctx.fillText("MLE",player.x,player.y);
 
+  /* HUD */
   ctx.fillStyle="#0d47a1";
   ctx.font="bold 16px Arial";
   ctx.fillText("Score : "+score,12,22);
@@ -282,5 +310,4 @@ requestAnimationFrame(loop);
 </script>
 </body>
 </html>
-
 
