--- a/index.html
+++ b/index.html
@@ -2,75 +2,66 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Runner Mission Locale</title>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  background: #0d47a1;
-  font-family: Arial, Helvetica, sans-serif;
+html,body{
+  margin:0;
+  padding:0;
+  background:#0d47a1;
+  font-family:Arial,Helvetica,sans-serif;
+  overflow:hidden;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#container{
+  width:100%;
+  max-width:900px;
+  margin:auto;
+  position:relative;
 }
 
-#container {
-  width: 100%;
-  max-width: 900px;
-  padding: 10px;
-  box-sizing: border-box;
-  position: relative;
+canvas{
+  width:100%;
+  height:auto;
+  display:block;
+  background:linear-gradient(#fff,#e3f2fd);
+  border-radius:14px;
 }
 
-canvas {
-  width: 100%;
-  display: block;
-  background: linear-gradient(#ffffff, #e3f2fd);
-  border-radius: 14px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.35);
+.overlay{
+  position:absolute;
+  inset:0;
+  background:rgba(255,255,255,.96);
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+  z-index:10;
 }
 
-.overlay {
-  position: absolute;
-  inset: 0;
-  background: rgba(255,255,255,.97);
-  border-radius: 14px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  z-index: 10;
-  padding: 20px;
-  color: #0d47a1;
+button{
+  padding:12px 30px;
+  margin-top:15px;
+  border:none;
+  border-radius:8px;
+  font-size:16px;
+  background:#ffca28;
+  cursor:pointer;
 }
 
-button {
-  margin-top: 16px;
-  padding: 12px 32px;
-  font-size: 16px;
-  border: none;
-  border-radius: 8px;
-  background: #ffca28;
-  cursor: pointer;
-}
-button:hover { background: #ffc107; }
-
-.qcm button {
-  width: 100%;
-  margin: 6px 0;
+.qcm button{
+  width:100%;
+  margin:6px 0;
 }
 
-#footer {
-  margin: 10px;
-  color: white;
-  font-weight: bold;
-  text-align: center;
+#footer{
+  color:white;
+  text-align:center;
+  margin-top:8px;
+  font-weight:bold;
 }
 </style>
 </head>
@@ -80,109 +71,100 @@ button:hover { background: #ffc107; }
 <div id="container">
   <canvas id="game"></canvas>
 
-  <div id="menu" class="overlay">
+  <div id="rotate" class="overlay">
+    <h2>Veuillez retourner votre téléphone</h2>
+    <p>Le jeu fonctionne uniquement en mode paysage.</p>
+  </div>
+
+  <div id="menu" class="overlay" style="display:none">
     <h2>Runner Mission Locale</h2>
     <p>
-      🎯 Saute pour éviter les obstacles<br>
-      🖱️ Clic / Toucher / <b>Espace</b><br><br>
-      💡 En cas de collision, réponds à une question professionnelle pour continuer.
+      🎮 Saute pour éviter les obstacles<br>
+      🖱️ Clic / Toucher / Espace<br><br>
+      ❓ En cas de collision, réponds à une question professionnelle pour continuer
     </p>
     <button id="startBtn">Démarrer</button>
   </div>
 
-  <div id="question" class="overlay" style="display:none"></div>
-  <div id="countdown" class="overlay" style="display:none;font-size:72px;"></div>
+  <div id="question" class="overlay qcm" style="display:none"></div>
+  <div id="countdown" class="overlay" style="font-size:72px;display:none"></div>
 </div>
 
-<div id="footer">
-La Mission Locale vous souhaite un bon jeu.
-</div>
+<div id="footer">La Mission Locale vous souhaite un bon jeu.</div>
 
 <script>
-/* ================= CANVAS ================= */
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-const container = document.getElementById("container");
+const canvas=document.getElementById("game");
+const ctx=canvas.getContext("2d");
 
-function resizeCanvas(){
-  const w = container.clientWidth;
-  const h = Math.min(window.innerHeight * 0.7, w * 9 / 16);
-  canvas.width = w;
-  canvas.height = h;
+function resize(){
+  if(window.innerHeight>window.innerWidth){
+    document.getElementById("rotate").style.display="flex";
+    canvas.style.display="none";
+    return;
+  }
+  document.getElementById("rotate").style.display="none";
+  canvas.style.display="block";
+  document.getElementById("menu").style.display="flex";
+
+  const w=document.getElementById("container").clientWidth;
+  const h=Math.min(window.innerHeight*0.7,w*0.5);
+  canvas.width=w;
+  canvas.height=h;
 }
-window.addEventListener("resize", resizeCanvas);
-resizeCanvas();
+window.addEventListener("resize",resize);
+resize();
 
-/* ================= QUESTIONS ================= */
-const QUESTIONS = [
-{q:"Quel est l’objectif principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Distribuer des offres d’emploi uniquement","Former directement aux métiers"],a:0},
-{q:"Un CV sert avant tout à :",c:["Décrocher un entretien","Expliquer toute sa vie","Remplacer l’entretien"],a:0},
-{q:"Une compétence professionnelle correspond :",c:["À un savoir-faire ou savoir-être","À un loisir","À un diplôme uniquement"],a:0},
-{q:"Lors d’un entretien, il est conseillé :",c:["De préparer ses réponses","D’improviser","De parler sans écouter"],a:0},
-{q:"Le savoir-être concerne :",c:["Le comportement au travail","Les connaissances scolaires","Le salaire"],a:0},
-{q:"Un projet professionnel peut évoluer :",c:["Oui, avec l’expérience","Non","Uniquement après un diplôme"],a:0},
-{q:"Arriver à l’heure au travail montre :",c:["Le professionnalisme","L’indifférence","Le stress"],a:0},
-{q:"Un recruteur attend principalement :",c:["De la motivation et de la cohérence","Une perfection immédiate","Une longue expérience"],a:0},
-{q:"Un stage permet :",c:["De découvrir un métier","D’éviter la formation","D’obtenir un CDI"],a:0},
-{q:"Une lettre de motivation doit être :",c:["Personnalisée","Identique pour tous","Très longue"],a:0},
-{q:"Le travail en équipe nécessite :",c:["Communication et respect","Autorité","Silence"],a:0},
-{q:"Un refus de candidature peut servir à :",c:["Progresser","Abandonner","Se décourager"],a:0},
-{q:"Un objectif professionnel doit être :",c:["Réaliste et précis","Flou","Imposé"],a:0},
-{q:"La Mission Locale s’adresse aux jeunes :",c:["De 16 à 25 ans","De tout âge","Uniquement diplômés"],a:0},
-{q:"Le respect des règles en entreprise est :",c:["Essentiel","Optionnel","Secondaire"],a:0},
-{q:"Avant un entretien, il est utile :",c:["De se renseigner sur l’entreprise","D’éviter les informations","De rester vague"],a:0},
-{q:"Un CV clair permet :",c:["Une meilleure lecture","De masquer son parcours","D’impressionner visuellement"],a:0},
-{q:"Demander de l’aide montre :",c:["Une démarche positive","Une faiblesse","Un manque de motivation"],a:0},
-{q:"Un parcours professionnel peut être :",c:["Progressif","Figé","Parfait dès le départ"],a:0},
-{q:"L’autonomie au travail signifie :",c:["Savoir s’organiser","Travailler seul","Ne pas demander d’aide"],a:0}
+/* QUESTIONS */
+const QUESTIONS=[
+{q:"Quel est le rôle principal de la Mission Locale ?",c:["Accompagner les jeunes vers l’emploi et l’autonomie","Distribuer des emplois","Former directement"],a:0},
+{q:"Un CV doit avant tout :",c:["Être clair et lisible","Être très long","Être décoratif"],a:0},
+{q:"Le savoir-être correspond :",c:["Au comportement professionnel","Aux diplômes","À l’âge"],a:0},
+{q:"Avant un entretien, il est conseillé :",c:["De se préparer","D’improviser","De ne rien dire"],a:0},
+{q:"Arriver à l’heure montre :",c:["Du sérieux","Du stress","De la chance"],a:0},
+{q:"Un refus de candidature permet :",c:["De progresser","D’abandonner","D’arrêter de chercher"],a:0},
+{q:"Le travail en équipe nécessite :",c:["Communication","Silence","Autorité"],a:0},
+{q:"Un projet professionnel peut :",c:["Évoluer","Rester figé","Être imposé"],a:0},
+{q:"Une lettre de motivation doit être :",c:["Personnalisée","Identique","Très courte"],a:0},
+{q:"Un stage sert à :",c:["Découvrir un métier","Éviter le travail","Gagner un salaire"],a:0},
+{q:"Demander de l’aide montre :",c:["Une démarche positive","Une faiblesse","Un échec"],a:0},
+{q:"La ponctualité est :",c:["Essentielle","Optionnelle","Secondaire"],a:0},
+{q:"Un CV clair permet :",c:["Une meilleure compréhension","De cacher des infos","D’impressionner"],a:0},
+{q:"Une compétence peut être :",c:["Technique ou comportementale","Uniquement scolaire","Naturelle"],a:0},
+{q:"La motivation se montre par :",c:["L’attitude","Les promesses","Le silence"],a:0},
+{q:"Se renseigner sur l’entreprise permet :",c:["De mieux répondre","De perdre du temps","D’éviter l’entretien"],a:0},
+{q:"Un parcours professionnel est :",c:["Progressif","Parfait","Identique"],a:0},
+{q:"L’autonomie signifie :",c:["Savoir s’organiser","Travailler seul","Ne jamais demander"],a:0},
+{q:"La Mission Locale accompagne :",c:["Les jeunes de 16 à 25 ans","Tout le monde","Uniquement les diplômés"],a:0},
+{q:"Le respect au travail est :",c:["Indispensable","Optionnel","Négociable"],a:0}
 ];
 
-let questionDeck = [];
+let questionDeck=[...QUESTIONS].sort(()=>Math.random()-0.5);
 
-/* ================= GAME STATE ================= */
-let state = "menu";
-let score = 0;
-let level = 1;
-let speed = 3;
-let gravity = 0.45;
-let immunity = 0;
-let lastSpawn = 0;
-let obstacles = [];
+/* GAME */
+let state="menu",score=0,level=1,speed=3,immunity=0;
+const gravity=0.45;
+const player={x:120,y:0,r:22,vy:0,jumps:0};
+let obstacles=[],lastSpawn=0;
 
-const player = {
-  x: 120,
-  y: 0,
-  r: 22,
-  vy: 0,
-  jumps: 0
-};
+function ground(){return canvas.height-50;}
 
-function groundY(){ return canvas.height - 60; }
-
-/* ================= RESET ================= */
-function resetGame(){
-  score = 0;
-  level = 1;
-  speed = 3;
-  obstacles = [];
-  player.y = groundY();
-  player.vy = 0;
-  player.jumps = 0;
-  immunity = 120;
-  questionDeck = [...QUESTIONS].sort(()=>Math.random()-0.5);
+function reset(){
+  score=0;level=1;speed=3;
+  obstacles=[];
+  player.y=ground();
+  player.vy=0;player.jumps=0;
+  immunity=120;
+  questionDeck=[...QUESTIONS].sort(()=>Math.random()-0.5);
 }
 
-/* ================= START ================= */
-document.getElementById("startBtn").onclick = () => {
-  document.getElementById("menu").style.display = "none";
-  resetGame();
-  startCountdown();
+document.getElementById("startBtn").onclick=()=>{
+  document.getElementById("menu").style.display="none";
+  reset();startCountdown();
 };
 
-/* ================= CONTROLS ================= */
 function jump(){
-  if(state === "play" && player.jumps < 2){
-    player.vy = -14;
+  if(state==="play" && player.jumps<2){
+    player.vy=-14;
     player.jumps++;
   }
 }
@@ -190,54 +172,40 @@ window.addEventListener("keydown",e=>{if(e.code==="Space")jump();});
 canvas.addEventListener("click",jump);
 canvas.addEventListener("touchstart",jump);
 
-/* ================= OBSTACLES ================= */
 function spawnObstacle(){
-  const air = Math.random() < 0.3;
-  const h = air ? 22 : 32;
+  const air=Math.random()<0.3;
   obstacles.push({
-    x: canvas.width + 40,
-    y: air ? groundY()-90 : groundY()-h,
-    w: 24,
-    h: h
+    x:canvas.width+30,
+    y:air?ground()-90:ground()-30,
+    w:24,h:air?22:30
   });
 }
 
-/* ================= QUESTION ================= */
 function showQuestion(){
   state="question";
   const box=document.getElementById("question");
   const q=questionDeck.shift();
-
-  box.innerHTML=`<h3>${q.q}</h3>`;
-  q.c.forEach((t,i)=>{
+  box.innerHTML="<h3>"+q.q+"</h3>";
+  q.c.forEach((txt,i)=>{
     const b=document.createElement("button");
-    b.textContent=t;
+    b.textContent=txt;
     b.onclick=()=>{
       box.style.display="none";
-      if(i===q.a){
-        immunity=120;
-        startCountdown();
-      } else {
-        document.getElementById("menu").style.display="flex";
-        state="menu";
-      }
+      if(i===q.a){immunity=120;startCountdown();}
+      else{state="menu";document.getElementById("menu").style.display="flex";}
     };
     box.appendChild(b);
   });
   box.style.display="flex";
 }
 
-/* ================= COUNTDOWN ================= */
 function startCountdown(){
   const cd=document.getElementById("countdown");
-  let t=3;
-  cd.style.display="flex";
-  cd.textContent=t;
-  state="countdown";
+  let t=3;state="countdown";
+  cd.style.display="flex";cd.textContent=t;
   const i=setInterval(()=>{
-    t--;
-    cd.textContent=t;
-    if(t<=0){
+    t--;cd.textContent=t;
+    if(t===0){
       clearInterval(i);
       cd.style.display="none";
       state="play";
@@ -245,64 +213,43 @@ function startCountdown(){
   },1000);
 }
 
-/* ================= LOOP ================= */
 function loop(time){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
   if(state==="play"){
     player.vy+=gravity;
     player.y+=player.vy;
+    if(player.y>=ground()){player.y=ground();player.vy=0;player.jumps=0;}
 
-    if(player.y>=groundY()){
-      player.y=groundY();
-      player.vy=0;
-      player.jumps=0;
-    }
-
-    if(time-lastSpawn>1400){
-      spawnObstacle();
-      lastSpawn=time;
-    }
+    if(time-lastSpawn>1400){spawnObstacle();lastSpawn=time;}
 
     obstacles.forEach(o=>{
       o.x-=speed;
       ctx.fillStyle="#e53935";
       ctx.fillRect(o.x,o.y,o.w,o.h);
-
       if(immunity<=0 &&
-        player.x+player.r>o.x &&
-        player.x-player.r<o.x+o.w &&
-        player.y+player.r>o.y){
+         player.x+player.r>o.x &&
+         player.x-player.r<o.x+o.w &&
+         player.y+player.r>o.y){
         showQuestion();
       }
     });
-
     obstacles=obstacles.filter(o=>o.x+o.w>0);
-
-    score++;
-    if(score%500===0){level++;speed+=0.5;}
-    if(immunity>0) immunity--;
+    score++;if(score%500===0){level++;speed+=0.5;}
+    if(immunity>0)immunity--;
   }
 
-  /* PLAYER */
   ctx.beginPath();
   ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fillStyle="#ffb300";
-  ctx.fill();
-  ctx.strokeStyle="#1565c0";
-  ctx.lineWidth=4;
-  ctx.stroke();
-  ctx.fillStyle="#1565c0";
-  ctx.font="bold 12px Arial";
-  ctx.textAlign="center";
-  ctx.textBaseline="middle";
+  ctx.fillStyle="#ffb300";ctx.fill();
+  ctx.strokeStyle="#1565c0";ctx.lineWidth=4;ctx.stroke();
+  ctx.fillStyle="#1565c0";ctx.font="bold 12px Arial";
+  ctx.textAlign="center";ctx.textBaseline="middle";
   ctx.fillText("MLE",player.x,player.y);
 
-  /* HUD */
-  ctx.fillStyle="#0d47a1";
-  ctx.font="bold 16px Arial";
+  ctx.fillStyle="#0d47a1";ctx.font="bold 16px Arial";
   ctx.fillText("Score : "+score,12,22);
-  ctx.fillText("Niveau : "+level,12,44);
+  ctx.fillText("Niveau : "+level,12,42);
 
   requestAnimationFrame(loop);
 }
